2013-12-21  Araki Ken  <arakiken@users.sf.net>

	* 3.3.2 released.
	  (tag "rel-3_3_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.2.

2013-12-21  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The bug which drew mouse cursor incorrectly on 4bpp is fixed.

	* gtk/vte.c:
	  - The bug which disabled true transparency on roxterm just after it
	    started is fixed.
	  - Hack for roxterm works if it started as "x-terminal-emulator" or
	    "exo-open --launch TerminalEmulator".

	* jni/x_display.c: x_display_set_use_ansi_colors() is added.

	* win32/x_window.c: x_window_{xct|utf}_selection_request() works as a thread.

	* ml_line.c: Segfault caused by zero column characters like 0x200e is fixed.

2013-12-19  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: The palette of 4bpp framebuffer is initialized
	  to monochrome if --depth 1 option is specified.

	* fb/x_display.c: put_image_124bpp() is fixed.

	* c_imagelib.c, fb/x_imagelib.c, fb/x_display.c:
	  If the value of "use_ansi_colors" option is false on 4bpp framebuffer,
	  the colors used by the wall picture are set to framebuffer palette
	  by x_display_set_use_ansi_colors() and x_display_set_cmap().

	* win32/x_window.c: Fix error check of OpenClipboard().

	* x_main_config.c: Even if the default value is specified for "use_urgent_bell",
	  "exit_backscroll_by_pty", "allow_change_shortcut", "allow_scp", "use_clipboard",
	  "use_alt_buffer", "use_ansi_colors" and "leftward_double_drawing", it is applied.

2013-12-18  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Fix the 4 bpp specific bug.

2013-12-18  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Fix typo.

	* mlimgloader/gdk-pixbuf.c:
	  It is possible to convert image format by mlimgloader [windowid] [width]
	  [height] [src path] [dst path].

2013-12-17  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.win32, doc/ja/README.win32: Updated.
